--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,23 @@ img:hover {
   background-color: #dd4444;
 }
 
+.column  {
+  justify-content: center;
+
+}
+
+.large {
+  width: 100%;
+}
+
+.small {
+width: 40%;
+}
+
+.med {
+  width: 60%;
+}
+
 /* create a column class! make sure all of the divs within 'container's have a class of 'column' */
 
 /* create your tile classes! we recommend .small .med .large */
