--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ img:hover {
 .column {
 width: 48%;
 display: inline-block;
-  *display: inline; /* For IE7 */
+  display: inline; /* For IE7 */
   zoom: 1; /* Trigger hasLayout */
   width: 50%;
   text-align: center;
